package CDIO3.Player;

public class Player {
    Wallet WalletObj1 = new Wallet();
    public static int Pamount;
}
