package CDIO3.Tiles;

public class Board {
    
}
